# lunar-propellant-energy-model

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
paper/: MANUSCRIPT.md  PAPER.md  PSR-COLOCATION.md  REFERENCES.md  WASTE-HEAT-OFFSET.md  manuscript.tex  references.bib
results/: comparison.md
scripts/: make_figures.py
src/lpem/: __init__.py  arch.py  benefit.py  cli.py  constants.py  model.py  params.py  routes.py  sensitivity.py  sobol.py  stages.py  waste_heat.py
tests/: test_arch.py  test_benefit.py  test_routes.py  test_sensitivity.py  test_sobol.py  test_stages.py  test_validation.py  test_waste_heat.py
