[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lpem"
version = "0.6.0"
description = "Common-basis electrical-energy model for lunar propellant production routes"
authors = [{ name = "Walter Kueffer" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
figure = ["matplotlib>=3.6"]
dev = ["pytest>=7"]

[project.scripts]
lpem = "lpem.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
